All Pages dones

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -2,21 +2,21 @@
     <div class="container-fluid" id="pad-main">
         <div class="row">
             <div class="col-xs-12 center-block">
-                <a href="#/housing" ng-click="setFirstPage(false)" class="btn btn-success btn-lg btn-block center-block"><h1>Housing</h1></a>
+                <a href="#/housing" ng-click="setPgId(1)" class="btn btn-success btn-lg btn-block center-block"><h1>Housing</h1></a>
             </div>
         </div>
         <br/>
         <br/>
         <div class="row">
             <div class="col-xs-12 center-block">
-                <a href="#/entertainment" ng-click="setFirstPage(false)" class="btn btn-success btn-lg btn-block center-block"><h1>Entertainment</h1></a>
+                <a href="#/entertainment" ng-click="setPgId(2)" class="btn btn-success btn-lg btn-block center-block"><h1>Entertainment</h1></a>
             </div>
         </div>
         <br/>
         <br/>
         <div class="row">
             <div class="col-xs-12 center-block">
-                <a href="#/nutrition" ng-click="setFirstPage(false)" class="btn btn-success btn-block center-block"><h1>Nutrition</h1></a>
+                <a href="#/nutrition" ng-click="setPgId(3)" class="btn btn-success btn-block center-block"><h1>Nutrition</h1></a>
             </div>
         </div>
     </div>
