--- a/app/housing/housing.html
+++ b/app/housing/housing.html
@@ -1,1 +1,22 @@
-HOusing
+<div class="container" id="pad-ho">
+    <!-- Panel #1 -->
+    <h1 class="heading-tit">Housing</h1>
+    <div ng-repeat="i in list | orderBy:'dist'">
+        <div class="panel panel-success">
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-xs-4 col-xs-offset-1 text-center">
+                        <a href="#/housing/housingInfo"><img ng-src="{{i.img}}" alt="Smiley face" class="minipic"></a>
+                    </div>
+                    <div class="col-xs-6">
+                        <p><b>{{i.name}}</b>
+                            <br/>
+                            {{i.desc}}
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-footer text-right"><small>distance: {{i.dist}} miles<small></div>
+        </div>
+    </div>
+</div>
