--- a/app/nutrition/nutrition.html
+++ b/app/nutrition/nutrition.html
@@ -1,1 +1,21 @@
-NUTRITION PAGE
+<div class="container" id="pad-ent">
+    <!-- Panel #1 -->
+    <div ng-repeat="i in list | orderBy:'dist'">
+        <div class="panel panel-success">
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-xs-4 col-xs-offset-1 text-center">
+                        <img ng-src="{{i.img}}" height="100" width="100">
+                    </div>
+                    <div class="col-xs-6">
+                        <p><b>{{i.name}}</b>
+                            <br/>
+                            {{i.desc}}
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-footer text-right"><small>distance: {{i.dist}} miles<small></div>
+        </div>
+    </div>
+</div>
