--- a/app/entertainment/entertainment.html
+++ b/app/entertainment/entertainment.html
@@ -1,11 +1,12 @@
 <div class="container" id="pad-ent">
     <!-- Panel #1 -->
-    <div ng-repeat="i in list | orderBy:'dist'">
+    <h1 ng-hide="moreInfo" class="heading-tit">Entertainment</h1>
+    <div ng-hide="moreInfo" ng-repeat="i in list | orderBy:'dist'">
         <div class="panel panel-success">
             <div class="panel-body">
                 <div class="row">
                     <div class="col-xs-4 col-xs-offset-1 text-center">
-                        <img src="rsc/profile.png" alt="Smiley face" height="100" width="100">
+                        <img ng-click="seeMoreInfo(true, i.id)" ng-src="{{i.img}}" alt="Smiley face" height="100" width="100">
                     </div>
                     <div class="col-xs-6">
                         <p><b>{{i.name}}</b>
@@ -16,6 +17,23 @@
                 </div>
             </div>
             <div class="panel-footer text-right"><small>distance: {{i.dist}} miles<small></div>
+        </div>
+    </div>
+
+
+    <div ng-hide="!moreInfo">
+        <h5 ng-click="moreInfo = false"><span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span> Back</h5>
+        <hr/>
+        <div class="row">
+            <div class="col-xs-12">
+                <img ng-src="{{list[selEl].img}}" class="img" alt="House"/>
+                <hr/>
+                <h3 class="text-left">{{list[selEl].name}}</h3>
+                <h4>Description: <br/>
+                <small>{{list[selEl].desc}}</small></h4>
+                <h4>Distance: <br/>
+                <small>{{list[selEl].dist}} miles</small></h4>
+            </div>
         </div>
     </div>
 </div>
