--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
   <div ng-controller="HomeCtrl">
       <header ng-include="'partials/header.html'"></header>
       <div ng-hide="pageId !== 0" ng-include="'home/home.html'"></div>
-      <div ng-view></div>
+      <div class="custom-body"ng-view></div>
       <footer ng-include="'partials/footer.html'"></footer>
   </div>
 
